fix alignment and add the turn tracker to see whose turn are now

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   color: #61dafb;
 }
 
+.board {
+  padding: 16rem 0 1rem 0;
+  
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
